--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ratinabijashvili.github.io/Bike-app",
+  "homepage": "https://ratinabijashvili.github.io/Bike-app/",
   "name": "bike",
   "version": "0.1.0",
   "private": true,
